# XpertAgent

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Dockerfile  README.md  deploy.sh  docker_start.sh  init.sh  pyproject.toml  requirements.txt  setup.py
data/custom_tools/: time_tool.py  weather_tool.py
docs/api/: agent.md  memory.md  planner.md  tools.md
docs/guides/: configuration.md  custom_tools.md  getting_started.md
examples/: simple_agent.py  test_grpc_service.py  test_simple_agent.py  test_xlogger.py  test_xocr_tool.py
xpertagent/agents/: xagent_ocr.py
xpertagent/apps/XMedOCR/: XMedOCR.py  xmedocr.proto
xpertagent/config/: settings.py
xpertagent/core/: agent.py  memory.py  planner.py  tools.py
xpertagent/prompts/: p_xocr.py
xpertagent/protos/: xcommon.proto  xcommon_pb2.py  xcommon_pb2_grpc.py  xmedocr.proto  xmedocr_pb2.py  xmedocr_pb2_grpc.py  xocr.proto  xocr_pb2.py  xocr_pb2_grpc.py
xpertagent/services/: xhttp_service.py  xservice.py
xpertagent/tools/: __init__.py  base.py
xpertagent/tools/xpert_calc/: xpert_calc.py
xpertagent/tools/xpert_ocr/: xocr_service.py  xpert_ocr.py
xpertagent/utils/: client.py  helpers.py  xding.py  xlogger.py
